k8s/graylog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: graylog
  labels:
    allow.http: "true"
    application: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graylog
  strategy: {}
  template:
    metadata:
      labels:
        service: graylog
    spec:
      serviceAccount: graylog
      containers:
      - env:
        - name: GRAYLOG_HTTP_ENABLE_CORS
          value: "true"
        - name: GRAYLOG_WEB_ENDPOINT_URI
          value: https://graylog.ronsal.com.br/api
        - name: GRAYLOG_ELASTICSEARCH_HOSTS
          value: "http://elasticsearch.graylog.svc.cluster.local:9200"
        - name: ELASTICSEARCH_DISCOVERY_ZEN_PING_MULTICAST_ENABLED
          value: "false"
        - name: ELASTICSEARCH_DISCOVERY_ZEN_PING_UNICAST_HOSTS
          value: "elasticsearch.graylog.svc.cluster.local:9300"
        - name: GRAYLOG_PASSWORD_SECRET
          value: 1q2w3e
        # - name: GRAYLOG_ROOT_PASSWORD_SHA2
          # value: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
        image: docker.io/graylog2/server:2.3.0-1 
        #image: graylog/graylog:3.0
        # Repositório oficial - docker.io/graylog2/server:2.3.0-1
        name: graylog
        ports:
        - containerPort: 9000
        - containerPort: 12201
        resources: {}

        volumeMounts:
        - name: graylog-volume
          mountPath: /opt/graylog/data

    #/opt/graylog/data \
    #/opt/graylog/data/journal \
    #/opt/graylog/data/log \
    #/opt/graylog/data/config \
    #/opt/graylog/data/plugin \
    #/opt/graylog/data/data

      restartPolicy: Always

      volumes:
      - name: graylog-volume
        persistentVolumeClaim:
          claimName: graylog-pvc

status: {}
