k8s/graylog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: graylog
  name: graylog
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: graylog.rancher.ronsal.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: graylog
              port:
                number: 80
